--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   function execute() {
     return gapi.client.drive.files
       .copy({
+        fileId: "1moHFCyeeZDUIyYYCXfMaLJwnpxYu4eMStottyhrFpV8",
         resource: {},
       })
       .then(
